# Welding_Robot

./: CMakeLists.txt  LICENSE  README.md  复现思路.md  算法源代码验证报告.md
0_src_versions/src_v3/: plane_extractor.cpp
1_models with lidar frame simulation/seam_fillet_lap_scene_normalized_irregular_dataset_lidar_sim_Y_36_frame/: 10_frame.txt  13_frame.txt  17_frame.txt  1_frame.txt  22_frame.txt  26_frame.txt  32_frame.txt  35_frame.txt  5_frame.txt  6_frame.txt  7_frame.txt
1_models with lidar frame simulation/seam_fillet_lap_scene_normalized_irregular_dataset_lidar_sim_Z_36_frame/: 11_frame.txt  14_frame.txt  15_frame.txt  1_frame.txt  22_frame.txt  28_frame.txt  2_frame.txt  36_frame.txt  7_frame.txt  all_camera_poses.txt
2_outputs for different versions/output_v2____plane_ok____corner_detect_ok____seam_dectect_not_ok/seam_fillet_lap_scene_normalized_irregular_Y_output/: corners_info.txt
3_install and visualize/: requirements.txt
Plane_weld_vision_extractor/0_src_versions/src_v2/: plane_extractor.cpp  weld_extractor.cpp
Plane_weld_vision_extractor/0_src_versions/src_v4/: corner_classifier.cpp
Plane_weld_vision_extractor/1_models with lidar frame simulation/seam_fillet_lap_scene_normalized_irregular_dataset_lidar_sim_Y_36_frame/: 15_frame.txt  20_frame.txt  21_frame.txt  27_frame.txt  28_frame.txt  29_frame.txt  33_frame.txt  34_frame.txt  3_frame.txt  9_frame.txt
Plane_weld_vision_extractor/1_models with lidar frame simulation/seam_fillet_lap_scene_normalized_irregular_dataset_lidar_sim_Z_36_frame/: 10_frame.txt  12_frame.txt  13_frame.txt  16_frame.txt  17_frame.txt  18_frame.txt  19_frame.txt  20_frame.txt  21_frame.txt  23_frame.txt  24_frame.txt  25_frame.txt  26_frame.txt  27_frame.txt  29_frame.txt  30_frame.txt  31_frame.txt  32_frame.txt  33_frame.txt  34_frame.txt  35_frame.txt  3_frame.txt  4_frame.txt  5_frame.txt  6_frame.txt  8_frame.txt  9_frame.txt
Plane_weld_vision_extractor/include/: corner_classifier.hpp  plane_extractor.hpp  plane_extractor.hpp.v1  pointcloud_registrar.hpp  weld_extractor.hpp
Plane_weld_vision_extractor/scripts/: generate_pointcloud_data.py  visualize_welds_html.py
Plane_weld_vision_extractor/scripts/scan_result/: 10_frame.txt  11_frame.txt  12_frame.txt  13_frame.txt  14_frame.txt  15_frame.txt  16_frame.txt  17_frame.txt  18_frame.txt  19_frame.txt  1_frame.txt  20_frame.txt  21_frame.txt  22_frame.txt  23_frame.txt  24_frame.txt  25_frame.txt  26_frame.txt  27_frame.txt  28_frame.txt  29_frame.txt  2_frame.txt  30_frame.txt  31_frame.txt  32_frame.txt  33_frame.txt  34_frame.txt  35_frame.txt  36_frame.txt  3_frame.txt  4_frame.txt  5_frame.txt  (+5 more)
Plane_weld_vision_extractor/seam_fillet_lap_scene_normalized_irregular_dataset_lidar_sim_Y_36_frame/: 11_frame.txt  12_frame.txt  14_frame.txt  16_frame.txt  18_frame.txt  19_frame.txt  23_frame.txt  24_frame.txt  25_frame.txt  2_frame.txt  30_frame.txt  31_frame.txt  36_frame.txt  4_frame.txt  8_frame.txt  all_camera_poses.txt
Plane_weld_vision_extractor/seam_fillet_lap_scene_normalized_irregular_output/: corners_info.txt  weld_seams.csv
Plane_weld_vision_extractor/src/: plane_extractor.cpp  plane_extractor.cpp.v1
Plane_weld_vision_extractor/src_v2/: corner_classifier.cpp
Plane_weld_vision_extractor/src_v3/: corner_classifier.cpp  pointcloud_registrar.cpp
WeldingRobot_Vision_PathPlanning/: README.md
include/: corner_classifier.hpp  plane_extractor.hpp
ros2_welding_test_data/: cad_test.csv
ros2_welding_test_data/seam_3_pipe_normalized_irregular_dataset_5_frame/: 3_frame.txt  4_frame.txt  5_frame.txt
ros2_welding_test_data/seam_v_shape_normalized_irregular_dataset_5_frame/: 4_frame.txt
ros2_welding_ws/: PC2R焊接系统-项目功能汇报书.html  PC2R焊接系统使用说明.html
ros2_welding_ws/install/: local_setup.sh  setup.sh
ros2_welding_ws/src/trajectory_planning/: CMakeLists.txt  package.xml
ros2_welding_ws/src/trajectory_planning/include/: adaptive_pointcloud_processor.hpp  main.hpp  motion_planning.hpp  pc2r_welding_generator.hpp  running_flow.hpp  seam_location.hpp  transformation.hpp  welding_config.hpp
ros2_welding_ws/src/trajectory_planning/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_welding_ws/src/trajectory_planning/install/trajectory_planning/share/trajectory_planning/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
ros2_welding_ws/src/trajectory_planning/install/trajectory_planning/share/trajectory_planning/cmake/: trajectory_planningConfig.cmake
ros2_welding_ws/src/trajectory_planning/scripts/: generate_dataset.py  generate_irregular_dataset.py  make_irregular.py  normalize_final.py  normalize_pcd.py
ros2_welding_ws/src/trajectory_planning/src/: adaptive_pointcloud_processor.cpp  main.cpp  motion_planning.cpp  pc2r_welding_generator.cpp  pc2r_welding_generator.cpp.back  running_flow.cpp  seam_location.cpp  transformation.cpp  welding_config.cpp
ros2_welding_ws/src/trajectory_planning/welding_scene_data/3d_model/: ply2pcd.py
ros2_welding_ws/src/trajectory_planning/welding_scene_data/3d_model/seam_3_pipe_welding/: seam_3_pipe_welding.3dm
ros2_welding_ws/src/trajectory_planning/welding_scene_data/3d_model/seam_fillet_lap_scene/: 塔脚焊接场景.3dm  塔脚焊接场景.3dm.rhl  塔脚焊接场景.3dmbak
ros2_welding_ws/src/trajectory_planning/welding_scene_data/3d_model/seam_v_shape_welding/: seam_v_shape_welding.stl
ros2_welding_ws/src/trajectory_planning/welding_scene_data/generated_data/seam_3_pipe_normalized_irregular_dataset/: 1_frame.txt
ros2_welding_ws/src/trajectory_planning/welding_scene_data/generated_data/seam_3_pipe_normalized_irregular_dataset_5_frame/: 2_frame.txt
ros2_welding_ws/src/trajectory_planning/welding_scene_data/generated_data/seam_v_shape_normalized_irregular_dataset/: 1_frame.txt
ros2_welding_ws/src/trajectory_planning/welding_scene_data/generated_data/seam_v_shape_normalized_irregular_dataset_5_frame/: 2_frame.txt  3_frame.txt  5_frame.txt
scripts/: generate_pointcloud_data.py  normalize_mesh.py  visualize_complete.py
scripts/models/: fillet_1_angle.3dm
src/: corner_classifier.cpp  weld_extractor.cpp
(+22 files in other folders)
