<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_planning</name>
  <version>1.0.0</version>
  <description>ROS2 trajectory planning for welding robot - 6DOF path planning and seam detection. 
    Includes PC2R (Point Cloud to Robotic Welding) algorithm based on IBNN-LM-ICP and EI Response from 
    Liu et al., Robotics and Computer-Integrated Manufacturing, 2025.</description>

  <maintainer email="rick@todo.todo">rick</maintainer>
  <license>Apache-2.0</license>

  <!-- ============================================ -->
  <!-- 构建工具依赖 -->
  <!-- ============================================ -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ============================================ -->
  <!-- ROS2 核心依赖 -->
  <!-- ============================================ -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- ============================================ -->
  <!-- 图像和点云处理 -->
  <!-- ============================================ -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_conversions</depend>

  <!-- ============================================ -->
  <!-- TF2 相关 -->
  <!-- ============================================ -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- ============================================ -->
  <!-- 构建依赖（头文件） -->
  <!-- ============================================ -->
  <build_depend>libpcl-dev</build_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>libboost-system-dev</build_depend>
  <build_depend>libboost-thread-dev</build_depend>
  <build_depend>libboost-filesystem-dev</build_depend>

  <!-- ============================================ -->
  <!-- 运行时依赖 -->
  <!-- ============================================ -->
  <exec_depend>libpcl-dev</exec_depend>
  <exec_depend>eigen3</exec_depend>

  <!-- ============================================ -->
  <!-- 导出配置 -->
  <!-- ============================================ -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
